--- a/mlruns_full_backup/733106191722119945/0d857db44c8947a8815ad8e50489daff/meta.yaml
+++ b/mlruns_full_backup/733106191722119945/0d857db44c8947a8815ad8e50489daff/meta.yaml
@@ -1,4 +1,4 @@
-artifact_uri: file:///C:/Users/shahu/OPEN%20CLASSROOMS/PROJET%206/Scoring_Model/mlruns/733106191722119945/0d857db44c8947a8815ad8e50489daff/artifacts
+artifact_uri: file:///C:/Users/shahu/Documents/OneDrive/OPEN%20CLASSROOMS/PROJET%206/Scoring_Model/mlruns/733106191722119945/0d857db44c8947a8815ad8e50489daff/artifacts
 end_time: 1765273283162
 entry_point_name: ''
 experiment_id: '733106191722119945'
