--- a/mlruns_full_backup/733106191722119945/70a0288e0ccf44328051045c1e080926/meta.yaml
+++ b/mlruns_full_backup/733106191722119945/70a0288e0ccf44328051045c1e080926/meta.yaml
@@ -1,4 +1,4 @@
-artifact_uri: file:///C:/Users/shahu/OPEN%20CLASSROOMS/PROJET%206/Scoring_Model/mlruns/733106191722119945/70a0288e0ccf44328051045c1e080926/artifacts
+artifact_uri: file:///C:/Users/shahu/Documents/OneDrive/OPEN%20CLASSROOMS/PROJET%206/Scoring_Model/mlruns/733106191722119945/70a0288e0ccf44328051045c1e080926/artifacts
 end_time: 1765201672535
 entry_point_name: ''
 experiment_id: '733106191722119945'
