--- a/mlruns_full_backup/733106191722119945/728f1945293843e4b1f080f69b15c9ce/meta.yaml
+++ b/mlruns_full_backup/733106191722119945/728f1945293843e4b1f080f69b15c9ce/meta.yaml
@@ -1,4 +1,4 @@
-artifact_uri: file:///C:/Users/shahu/OPEN%20CLASSROOMS/PROJET%206/Scoring_Model/mlruns/733106191722119945/728f1945293843e4b1f080f69b15c9ce/artifacts
+artifact_uri: file:///C:/Users/shahu/Documents/OneDrive/OPEN%20CLASSROOMS/PROJET%206/Scoring_Model/mlruns/733106191722119945/728f1945293843e4b1f080f69b15c9ce/artifacts
 end_time: 1765365781551
 entry_point_name: ''
 experiment_id: '733106191722119945'
