--- a/mlruns_full_backup/733106191722119945/786c01cf5ecc4958b54afa6f07b20b2b/meta.yaml
+++ b/mlruns_full_backup/733106191722119945/786c01cf5ecc4958b54afa6f07b20b2b/meta.yaml
@@ -1,4 +1,4 @@
-artifact_uri: file:///C:/Users/shahu/OPEN%20CLASSROOMS/PROJET%206/Scoring_Model/mlruns/733106191722119945/786c01cf5ecc4958b54afa6f07b20b2b/artifacts
+artifact_uri: file:///C:/Users/shahu/Documents/OneDrive/OPEN%20CLASSROOMS/PROJET%206/Scoring_Model/mlruns/733106191722119945/786c01cf5ecc4958b54afa6f07b20b2b/artifacts
 end_time: 1765201476362
 entry_point_name: ''
 experiment_id: '733106191722119945'
