--- a/mlruns_full_backup/733106191722119945/7daa2929479142c7870242239b5eb1d0/meta.yaml
+++ b/mlruns_full_backup/733106191722119945/7daa2929479142c7870242239b5eb1d0/meta.yaml
@@ -1,4 +1,4 @@
-artifact_uri: file:///C:/Users/shahu/OPEN%20CLASSROOMS/PROJET%206/Scoring_Model/mlruns/733106191722119945/7daa2929479142c7870242239b5eb1d0/artifacts
+artifact_uri: file:///C:/Users/shahu/Documents/OneDrive/OPEN%20CLASSROOMS/PROJET%206/Scoring_Model/mlruns/733106191722119945/7daa2929479142c7870242239b5eb1d0/artifacts
 end_time: 1765267010689
 entry_point_name: ''
 experiment_id: '733106191722119945'
