--- a/mlruns_full_backup/733106191722119945/9261e1b128cf4463ae446a54db155227/meta.yaml
+++ b/mlruns_full_backup/733106191722119945/9261e1b128cf4463ae446a54db155227/meta.yaml
@@ -1,4 +1,4 @@
-artifact_uri: file:///C:/Users/shahu/OPEN%20CLASSROOMS/PROJET%206/Scoring_Model/mlruns/733106191722119945/9261e1b128cf4463ae446a54db155227/artifacts
+artifact_uri: file:///C:/Users/shahu/Documents/OneDrive/OPEN%20CLASSROOMS/PROJET%206/Scoring_Model/mlruns/733106191722119945/9261e1b128cf4463ae446a54db155227/artifacts
 end_time: 1765266702647
 entry_point_name: ''
 experiment_id: '733106191722119945'
