--- a/mlruns_full_backup/733106191722119945/d55a07acfc1344b4983d3317a2bab09a/meta.yaml
+++ b/mlruns_full_backup/733106191722119945/d55a07acfc1344b4983d3317a2bab09a/meta.yaml
@@ -1,4 +1,4 @@
-artifact_uri: file:///C:/Users/shahu/OPEN%20CLASSROOMS/PROJET%206/Scoring_Model/mlruns/733106191722119945/d55a07acfc1344b4983d3317a2bab09a/artifacts
+artifact_uri: file:///C:/Users/shahu/Documents/OneDrive/OPEN%20CLASSROOMS/PROJET%206/Scoring_Model/mlruns/733106191722119945/d55a07acfc1344b4983d3317a2bab09a/artifacts
 end_time: 1765365853069
 entry_point_name: ''
 experiment_id: '733106191722119945'
