--- a/mlruns_full_backup/733106191722119945/meta.yaml
+++ b/mlruns_full_backup/733106191722119945/meta.yaml
@@ -1,4 +1,4 @@
-artifact_location: file:///C:/Users/shahu/OPEN%20CLASSROOMS/PROJET%206/Scoring_Model/mlruns/733106191722119945
+artifact_location: file:///C:/Users/shahu/Documents/OneDrive/OPEN%20CLASSROOMS/PROJET%206/Scoring_Model/mlruns/733106191722119945
 creation_time: 1765201460428
 experiment_id: '733106191722119945'
 last_update_time: 1765201460428
