--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ __pycache__/
 *.so
 .Python
 env/
+.venv/
+venv/
 build/
 develop-eggs/
 dist/
@@ -23,6 +25,9 @@ wheels/
 
 # Jupyter Notebooks
 .ipynb_checkpoints
+
+# Pytest
+.pytest_cache/
 
 # Data
 data/
